# idea-refinery

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.opencode/skills/: README.md
.specify/memory/: constitution.md
AIEF/context/: INDEX.md
AIEF/workflow/: INDEX.md
context/: INDEX.md
context/business/: DOMAIN.md
context/experience/: INDEX.md
context/tech/: ARCHITECTURE.md  GITFLOW.md  MULTI_FILE_ARCHITECTURE.md  TOOL_INTEGRATION.md  provider-integration.md
docs/skills/: INDEX.md  skill-manage-gitflow-release.md  skill-publish-github-release.md
docs/standards/: agent-spec.md  command-spec.md  skill-spec.md
idea_refinery/: __init__.py  cli.py  config.py
idea_refinery/exporter/: __init__.py  markdown.py
idea_refinery/gate/: __init__.py  evaluator.py
idea_refinery/models/: __init__.py  artifact.py  cr.py  run.py
idea_refinery/orchestrator/: __init__.py  graph.py
idea_refinery/prompts/: __init__.py  author.py  editor.py  reviewer.py
idea_refinery/providers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai_compat.py  registry.py
idea_refinery/schemas/: __init__.py  exec_plan.py  prd.py  tech_spec.py
idea_refinery/store/: __init__.py  sqlite.py
idea_refinery/utils/: __init__.py  json_utils.py
release-notes/: v0.4.0.md  v0.5.0.md  v0.6.0.md
tests/: test_artifact_versioning.py  test_cli.py  test_exporter.py  test_gate.py  test_json_utils.py  test_orchestrator_e2e.py  test_orchestrator_fallback.py  test_pipeline.py  test_registry_multi_provider.py  test_store.py
workflow/: INDEX.md
(+45 files in other folders)
