[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idea-refinery"
version = "0.1.0"
description = "Open-source idea refinery engine — converge any idea into actionable PRD/TECH/PLAN with CR-driven loops and measurable gates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "云霄" }]
keywords = ["ai", "llm", "prd", "planning", "refinery"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "click>=8.1.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.0",
  "aiohttp>=3.9.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
refinery = "idea_refinery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["idea_refinery"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
